...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "DetailView"
        setupUI()
    }
    
    fileprivate func hideImageLoading() {
        indicator.stopAnimating()
        indicator.isHidden = true
    }
    
    func setupUI() {
        let titleLabel = UILabel()
        titleLabel.text = "\(book.title)"
        titleLabel.numberOfLines = 0
        titleLabel.accessibilityIdentifier = "BookTitleLabel"
        
        let authorLabel = UILabel()
        authorLabel.text = "Author: \(book.authorName?.joined(separator: ", ") ?? "N/A")"
        authorLabel.numberOfLines = 0
        
        let yearLabel = UILabel()
...
