...
    }

    func setupUI() {
        title = "Books Explorer"
        
        searchBar.delegate = self
        searchBar.searchTextField.accessibilityIdentifier = "Search"
        navigationItem.titleView = searchBar

        tableView.accessibilityIdentifier = "BooksTableView"
        tableView.dataSource = self
        tableView.delegate = self
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "BookCell")
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "EmptyCell")
        view.addSubview(tableView)
        
...
